ADD_EXECUTABLE(lambert_test lambert_test.cpp)
ADD_EXECUTABLE(propagate_lagrangian_test propagate_lagrangian_test.cpp)
ADD_EXECUTABLE(propagate_lagrangian_u_test propagate_lagrangian_u_test.cpp)
ADD_EXECUTABLE(propagate_taylor_test propagate_taylor_test.cpp)
ADD_EXECUTABLE(propagate_taylor_jorba_test propagate_taylor_jorba_test.cpp)
ADD_EXECUTABLE(propagate_taylor_s_test propagate_taylor_s_test.cpp)
ADD_EXECUTABLE(leg_s_test leg_s_test.cpp)
ADD_EXECUTABLE(sgp4_test sgp4_test.cpp)

TARGET_LINK_LIBRARIES(lambert_test keplerian_toolbox_static ${LIBRARIES_4_STATIC})
TARGET_LINK_LIBRARIES(propagate_lagrangian_test keplerian_toolbox_static ${LIBRARIES_4_STATIC})
TARGET_LINK_LIBRARIES(propagate_lagrangian_u_test keplerian_toolbox_static ${LIBRARIES_4_STATIC})
TARGET_LINK_LIBRARIES(propagate_taylor_test keplerian_toolbox_static ${LIBRARIES_4_STATIC})
TARGET_LINK_LIBRARIES(propagate_taylor_jorba_test keplerian_toolbox_static ${LIBRARIES_4_STATIC})
TARGET_LINK_LIBRARIES(propagate_taylor_s_test keplerian_toolbox_static ${LIBRARIES_4_STATIC})
TARGET_LINK_LIBRARIES(leg_s_test keplerian_toolbox_static ${LIBRARIES_4_STATIC})
TARGET_LINK_LIBRARIES(sgp4_test keplerian_toolbox_static ${LIBRARIES_4_STATIC})

ADD_TEST(Testing_Multiple_Revolution_Lambert's_Solver lambert_test)
ADD_TEST(Testing_Keplerian_propagation_via_Lagrange_Coefficients_and_osculating_elements propagate_lagrangian_test)
ADD_TEST(Testing_Keplerian_propagation_via_Lagrange_Coefficients_and_universal_variables propagate_lagrangian_u_test)
ADD_TEST(Testing_Taylor_propagation_of_an_inertially_fixed_thrust_PyKEP_implementation propagate_taylor_test)
ADD_TEST(Testing_Taylor_propagation_of_an_inertially_fixed_thrust_Jorba_implementation propagate_taylor_jorba_test)
ADD_TEST(Testing_Taylor_propagation_of_an_inertially_fixed_thrust_in_the_Sundmann_Variable propagate_taylor_s_test)
ADD_TEST(Testing_Leg_in_The_Sundmann_Variable leg_s_test)
ADD_TEST(Testing_SGP4_propagation sgp4_test)


IF(BUILD_SPICE)
ADD_EXECUTABLE(load_spice_kernel_test load_spice_kernel_test.cpp)

TARGET_LINK_LIBRARIES(load_spice_kernel_test keplerian_toolbox_static ${LIBRARIES_4_STATIC})

ADD_TEST(Testing_Loading_of_SPICE_kernels load_spice_kernel_test)
ENDIF(BUILD_SPICE)