# Macro used to add a test
macro(ADD_PYKEP_TEST arg1)
    add_executable(${arg1} ${arg1}.cpp)
    IF(BUILD_SPICE)
        target_link_libraries(${arg1} keplerian_toolbox_static cspice Boost::boost Boost::serialization Boost::date_time)
    else()
        target_link_libraries(${arg1} keplerian_toolbox_static Boost::boost Boost::serialization Boost::date_time)
    endif()
    add_test(${arg1} ${arg1})
    set_property(TARGET ${arg1} PROPERTY CXX_STANDARD 11)
    set_property(TARGET ${arg1} PROPERTY CXX_STANDARD_REQUIRED YES)
    set_property(TARGET ${arg1} PROPERTY CXX_EXTENSIONS NO)
ENDMACRO()

ADD_PYKEP_TEST(lambert_test)
ADD_PYKEP_TEST(propagate_lagrangian_test)
ADD_PYKEP_TEST(propagate_lagrangian_u_test)
ADD_PYKEP_TEST(propagate_taylor_test)
ADD_PYKEP_TEST(propagate_taylor_J2_test)
ADD_PYKEP_TEST(propagate_taylor_jorba_test)
ADD_PYKEP_TEST(propagate_taylor_s_test)
ADD_PYKEP_TEST(leg_s_test)
ADD_PYKEP_TEST(sgp4_test)
ADD_PYKEP_TEST(anomalies_test)


IF(BUILD_SPICE)
    ADD_PYKEP_TEST(load_spice_kernel_test)
    ADD_PYKEP_TEST(spice_planet_test)
ENDIF()
