INSTALL(FILES __init__.py DESTINATION ${PYKEP_INSTALL_PATH}/trajectory_optimisation)
INSTALL(FILES _mga_1dsm.py DESTINATION ${PYKEP_INSTALL_PATH}/trajectory_optimisation)
INSTALL(FILES _mga_lt_nep.py DESTINATION ${PYKEP_INSTALL_PATH}/trajectory_optimisation)
INSTALL(FILES _mr_lt_nep.py DESTINATION ${PYKEP_INSTALL_PATH}/trajectory_optimisation)

