# Setup of the pykep core module.
YACMA_PYTHON_MODULE(_core core.cpp)
target_link_libraries(_core PRIVATE ${PYKEP_BP_TARGET} ${PYKEP_BOOST_TARGET})
target_compile_options(_core PRIVATE "$<$<CONFIG:DEBUG>:${PAGMO_CXX_FLAGS_DEBUG}>" "$<$<CONFIG:RELEASE>:${PAGMO_CXX_FLAGS_RELEASE}>")
set_property(TARGET _core PROPERTY CXX_STANDARD 11)
set_property(TARGET _core PROPERTY CXX_STANDARD_REQUIRED YES)
set_property(TARGET _core PROPERTY CXX_EXTENSIONS NO)

install(TARGETS _core
RUNTIME DESTINATION ${PYKEP_INSTALL_PATH}/core
LIBRARY DESTINATION ${PYKEP_INSTALL_PATH}/core
)

install(FILES __init__.py DESTINATION ${PYKEP_INSTALL_PATH}/core)
