INSTALL(FILES __init__.py DESTINATION ${PYKEP_INSTALL_PATH}/examples)
INSTALL(FILES _ex_utilities.py DESTINATION ${PYKEP_INSTALL_PATH}/examples)
#INSTALL(FILES _ex1.py DESTINATION ${PYKEP_INSTALL_PATH}/examples)
INSTALL(FILES _ex2.py DESTINATION ${PYKEP_INSTALL_PATH}/examples)
#INSTALL(FILES _ex3.py DESTINATION ${PYKEP_INSTALL_PATH}/examples)
#INSTALL(FILES _ex4.py DESTINATION ${PYKEP_INSTALL_PATH}/examples)
INSTALL(FILES _ex5.py DESTINATION ${PYKEP_INSTALL_PATH}/examples)
#INSTALL(FILES _ex6.py DESTINATION ${PYKEP_INSTALL_PATH}/examples)
INSTALL(FILES _ex7.py DESTINATION ${PYKEP_INSTALL_PATH}/examples)
INSTALL(FILES _ex8.py DESTINATION ${PYKEP_INSTALL_PATH}/examples)
INSTALL(FILES _ex9.py DESTINATION ${PYKEP_INSTALL_PATH}/examples)
INSTALL(FILES _ex10.py DESTINATION ${PYKEP_INSTALL_PATH}/examples)
