INSTALL(FILES __init__.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt)
INSTALL(FILES _lt_margo.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt)
INSTALL(FILES _mga_1dsm.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt)
#INSTALL(FILES _mga_lt_nep.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt)
#INSTALL(FILES _mr_lt_nep.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt)
#INSTALL(FILES _pl2pl_N_impulses.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt)
INSTALL(FILES _indirect.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt)
INSTALL(FILES _direct.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt)
