YACMA_PYTHON_MODULE(_util util.cpp)
target_link_libraries(_util PRIVATE ${PYKEP_BP_TARGET} ${PYKEP_BOOST_TARGET})
set_property(TARGET _util PROPERTY CXX_STANDARD 11)
set_property(TARGET _util PROPERTY CXX_STANDARD_REQUIRED YES)
set_property(TARGET _util PROPERTY CXX_EXTENSIONS NO)

install(TARGETS _util
RUNTIME DESTINATION ${PYKEP_INSTALL_PATH}/util
LIBRARY DESTINATION ${PYKEP_INSTALL_PATH}/util
)

install(FILES __init__.py DESTINATION ${PYKEP_INSTALL_PATH}/util)
