INSTALL(FILES __init__.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt/gym)
INSTALL(FILES _tandem.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt/gym)
INSTALL(FILES _juice.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt/gym)
INSTALL(FILES _solar_orbiter.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt/gym)
INSTALL(FILES _cassini1.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt/gym)
INSTALL(FILES _rosetta.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt/gym)
INSTALL(FILES _emNimp.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt/gym)
INSTALL(FILES _eve_mga1dsm.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt/gym)
INSTALL(FILES _cassini2.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt/gym)
INSTALL(FILES _messenger.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt/gym)

